Bugfixes, improvements.