@@ -7,10 +7,7 @@ import sidmeyer.carmanager.model.ActionRequest;
 import sidmeyer.carmanager.model.Car;
 import sidmeyer.carmanager.model.CarStatistic;
 
-import java.util.ArrayDeque;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.LinkedList;
+import java.util.*;
 
 /**
  * Created by Stas on 25.03.2017.
@@ -20,6 +17,9 @@ public class CarController {
 	private HashMap<Car, CarStatistic> statistic = new HashMap<Car, CarStatistic>();
 	private final int garageCapacity;
 	private final int waitingLineCapacity;
+	private ArrayDeque<Car> garage = new ArrayDeque<Car>();
+	private LinkedList<Car> wl = new LinkedList<Car>();
+	private Stack<Car> yard = new Stack<Car>();
 
 	public CarController(int garageCapacity, int waitingLCapacity) {
 		this.garageCapacity = garageCapacity;
@@ -29,34 +29,33 @@ public class CarController {
 				this.waitingLineCapacity + ".");
 	}
 
+	/**
+	 * Processes the requests/ Makes changes in garage and waiting line according to requests.
+	 * Fills statistic.
+	 * @param requests - list of requests.
+	 */
 	public void processRequests(ArrayList<ActionRequest> requests) {
 		LOG.info("Request processing started. Got " + requests.size() + " requests.");
-		ArrayDeque<Car> garage = new ArrayDeque<Car>();
-		LinkedList<Car> wl = new LinkedList<Car>();
-		//Stack<Car> yard = new Stack<Car>();
-		ArrayDeque<Car> yard = new ArrayDeque<Car>();
-
-
 
 		for (ActionRequest request : requests) {
 			Car car = request.getCar();
 			Action action = request.getAction();
 
-			if(statistic.get(car) == null) {
+			if (statistic.get(car) == null) {
 				statistic.put(car, new CarStatistic());
 			}
 			LOG.debug("Processing request: " + request + ".");
 			LOG.trace("WL: " + wl.size() + ", G: " + garage.size() + ", Y: " + yard.size() + ".");
-			if(action.equals(Action.IN)) {
-				if(garage.contains(car)) {
+			if (action.equals(Action.IN)) {
+				if (garage.contains(car)) {
 					LOG.debug("Car " + car + " already in garage.");
 				} else if (garage.size() < garageCapacity) {
 					garage.addLast(car);
 					LOG.debug("Car " + car + " entered garage.");
 					statistic.get(car).incGarageCount();
-				} else if(wl.contains(car)) {
+				} else if (wl.contains(car)) {
 					LOG.debug("Car " + car + " remains on waiting line.");
-				} else if(wl.size() < waitingLineCapacity) {
+				} else if (wl.size() < waitingLineCapacity) {
 					wl.addLast(car);
 					LOG.debug("Car " + car + " joined waiting line.");
 					statistic.get(car).incWaitingLineCount();
@@ -66,29 +65,29 @@ public class CarController {
 				}
 			}
 
-			if(action.equals(Action.OUT)) {
+			if (action.equals(Action.OUT)) {
 				if (wl.contains(car)) {
 					wl.remove(car);
 					LOG.debug("Car " + car + " went out from waiting line.");
-				} else if(!garage.contains(car) && !wl.contains(car)){
+				} else if (!garage.contains(car) && !wl.contains(car)) {
 					LOG.debug("Car " + car + " already out.");
 				} else if (garage.size() > 0 && garage.getFirst().equals(car)) {
 					garage.removeFirst();
 					LOG.debug("Car " + car + " went out from garage.");
 				} else if (garage.contains(car)) {
-					while(!garage.getFirst().equals(car)) {
-						yard.addFirst(garage.getFirst());
+					while (!garage.getFirst().equals(car)) {
+						yard.add(garage.getFirst());
 						statistic.get(garage.getFirst()).incYardCount();
 						garage.removeFirst();
 					}
 					garage.removeFirst();
 					LOG.debug("Car " + car + " went out from garage. Cars were on yard: " + yard.size() + ".");
-					while(yard.size() > 0) {
-						garage.addFirst(yard.getFirst());
-						statistic.get(yard.getFirst()).incGarageCount();
-						yard.removeFirst();
+					while (yard.size() > 0) {
+						garage.addFirst(yard.get(0));
+						statistic.get(yard.get(0)).incGarageCount();
+						yard.remove(0);
 					}
-					if(wl.size() > 0) {
+					if (wl.size() > 0) {
 						garage.addLast(wl.getFirst());
 						wl.removeFirst();
 						LOG.debug("Car " + garage.getLast() + " entered garage from waiting line.");
@@ -105,5 +104,13 @@ public class CarController {
 
 	public HashMap<Car, CarStatistic> getStatistic() {
 		return statistic;
+	}
+
+	public ArrayDeque<Car> getGarage() {
+		return garage;
+	}
+
+	public LinkedList<Car> getWl() {
+		return wl;
 	}
 }
